--- a/_components/Hero/index.html
+++ b/_components/Hero/index.html
@@ -8,7 +8,7 @@
 <div class="about">
   <div class="about__wrapper">
     <p><img class="about__logo" src="{{ site.baseurl }}/assets/img/svg-icons/sentimony-records-logo.svg" alt="Sentimony Records Logo SVG"></p>
-    <p>Sentimony Records is an independent record label started in Ukraine during the autumn 2006 by Irukanji with the main goal to contribute the growth of the psychedelic chillout scene.</p>
+    <p>Sentimony Records is an independent record label started in Ukraine during the autumn 2006 by Irukanji with the main goal to contribute the growth of the psychedelic chillout & trance scenes.</p>
   </div>
 </div>
 
@@ -17,5 +17,6 @@
 <div class="donate">
   <div class="donate__wrapper">
     <p>Recently all Sentimony Records releases available for free download.<br>We will be grateful for your feedback at <a href="https://sentimony.bandcamp.com" target="_blank">bandcamp</a>.</p>
+    <p>Donations are very welcome!<br>It is not an easy mission to keep the free music flowing.</p>
   </div>
 </div>
