add discogs into FooterBlock component

--- a/_components/FooterBlock/index.html
+++ b/_components/FooterBlock/index.html
@@ -36,10 +36,10 @@
         <span class="icon-mixcloud"></span>
         <span class="tooltip">mixcloud</span>
     </a> -->
-    <!-- <a href="http://www.discogs.com/label/82598-Sentimony-Records" target="_blank">
+    <a href="https://www.discogs.com/label/82598-Sentimony-Records?sort=year&sort_order=desc&layout=big" target="_blank">
         <span class="icon-discogs"></span>
         <span class="tooltip">discogs</span>
-    </a> -->
+    </a>
   </div>
 
   <div class="footer-block__labels">
