upd hero & releases content

--- a/_components/Hero/index.html
+++ b/_components/Hero/index.html
@@ -8,7 +8,7 @@
 <div class="about">
   <div class="about__wrapper">
     <p><img class="about__logo" src="{{ site.baseurl }}/assets/img/svg-icons/sentimony-records-logo.svg" alt="Sentimony Records Logo SVG"></p>
-    <p>Sentimony Records is an independent record label started in Ukraine during the autumn 2006 by Irukanji with the main goal to contribute the growth of the psychedelic chillout & trance scenes.</p>
+    <p>Sentimony Records is an independent record label started in Ukraine during the autumn 2006 by <a href='/artist/irukanji'>Irukanji</a> with the main goal to contribute the growth of the psychedelic chillout & trance scenes.</p>
   </div>
 </div>
 
