add vkontakte link into FooterBlock component

--- a/_components/FooterBlock/index.html
+++ b/_components/FooterBlock/index.html
@@ -36,6 +36,10 @@
         <span class="icon-mixcloud"></span>
         <span class="tooltip">mixcloud</span>
     </a> -->
+    <a href="https://vk.com/club1342946" target="_blank">
+        <span class="icon-vkontakte"></span>
+        <span class="tooltip">vkontakte</span>
+    </a>
     <a href="https://www.discogs.com/label/82598-Sentimony-Records?sort=year&sort_order=desc&layout=big" target="_blank">
         <span class="icon-discogs"></span>
         <span class="tooltip">discogs</span>
