restyling arrows at ReleaseListSwiper component

--- a/_components/ReleaseListSwiper/index.html
+++ b/_components/ReleaseListSwiper/index.html
@@ -24,8 +24,8 @@
       </a>
       {% endfor %}
     </div>
-    <div class="swiper-button-prev swiper-button-white"></div>
-    <div class="swiper-button-next swiper-button-white"></div>
+    <div class="release-list-swiper__prev"></div>
+    <div class="release-list-swiper__next"></div>
     <div class="swiper-scrollbar"></div>
   </div>
 </div>
