cleaning, rework svg-icons

--- a/_components/FooterBlock/index.html
+++ b/_components/FooterBlock/index.html
@@ -32,6 +32,10 @@
         <span class="icon-twitter"></span>
         <span class="tooltip">twitter</span>
     </a>
+    <a href="https://plus.google.com/110805662421856505326" target="_blank">
+        <span class="icon-googleplus"></span>
+        <span class="tooltip">googleplus</span>
+    </a>
     <!-- <a href="https://www.mixcloud.com/sentimony" target="_blank">
         <span class="icon-mixcloud"></span>
         <span class="tooltip">mixcloud</span>
