--- a/_components/PageArtist/index.html
+++ b/_components/PageArtist/index.html
@@ -1,11 +1,7 @@
 <div class="page-artist">
+  {% include SVG/deco-triangle.svg fill='#fff' %}
+
   <h1>{{ page.title }}</h1>
-
-  <!-- <img src="{{ site.baseurl }}/assets/img/artists/{{ page.slug }}.jpg" alt="{{ page.title }}"> -->
-
-  <!-- {% if page.soundcloud-id %}
-    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud-id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true"></iframe>
-  {% endif %} -->
 
   {% if page.photo_cover %}
   <p>
@@ -50,6 +46,16 @@
       <div class="iframe-holder">
         <div class="iframe-holder__ratio">
           <iframe class="iframe-holder__iframe" src="https://www.youtube.com/embed/videoseries?list={{ page.youtube_id }}" allowfullscreen></iframe>
+        </div>
+      </div>
+    </p>
+  {% endif %}
+
+  {% if page.soundcloud_id %}
+    <p>
+      <div class="iframe-holder">
+        <div class="iframe-holder__ratio">
+          <iframe class="iframe-holder__iframe" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud_id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true"></iframe>
         </div>
       </div>
     </p>
