add junodownload link into FooterBlock component

--- a/_components/FooterBlock/index.html
+++ b/_components/FooterBlock/index.html
@@ -24,6 +24,10 @@
       <span class="icon-youtube"></span>
       <span class="tooltip">youtube</span>
     </a>
+    <a href="http://www.junodownload.com/labels/Sentimony/releases/?order=date_down" target="_blank">
+      <span class="icon-junodownload"></span>
+      <span class="tooltip">junodownload</span>
+    </a>
     <a href="https://soundcloud.com/sentimony" target="_blank">
       <span class="icon-soundcloud"></span>
       <span class="tooltip">soundcloud</span>
