:fire: add vue-tabs, add juno, add scss variables, upd slogan, cleaning

--- a/_components/Hero/index.html
+++ b/_components/Hero/index.html
@@ -1,7 +1,7 @@
 <div class="hero">
   <div class="hero__wrapper">
     <h1 class="hero__title">Sentimony Records</h1>
-    <h2 class="hero__subtitle">Psychill Music Label</h2>
+    <h2 class="hero__subtitle">{{ site.slogan }}</h2>
   </div>
 </div>
 
