--- a/_components/PageRelease/index.html
+++ b/_components/PageRelease/index.html
@@ -28,7 +28,7 @@
           <div class="page-release__style">{{ page.style }}</div>
         </div>
         <h1 class="page-release__title">{{ page.title }}</h1>
-        <div class="page-release__small-info">Buy on:</div>
+        <div class="page-release__small-info">Get it:</div>
         <div>
           <a class="page-release__bandcamp-btn{% if page.coming_soon %} is-disabled{% endif %}" href="{% if page.coming_soon %}javascript:void(0){% else %}{{ page.link_bandcamp }}{% endif %}" target="_blank">
             <img class="page-release__bandcamp-btn-img" src="{{ site.baseurl }}/assets/img/svg-icons/bandcamp.svg">
