--- a/_components/PageArtist/index.html
+++ b/_components/PageArtist/index.html
@@ -1,68 +1,70 @@
 <div class="page-artist">
   {% include SVG/deco-triangle.svg fill='#fff' %}
 
-  <h1>{{ page.title }}</h1>
+  <div class="page-artist__wrapper">
+    <h1>{{ page.title }}</h1>
 
-  {% if page.photo_cover %}
-    <p>
-      <img class="photo-cover" src="{{ page.photo_cover }}" alt="{{ page.title }}">
-    </p>
-  {% endif %}
+    {% if page.photo_cover %}
+      <p>
+        <img class="photo-cover" src="{{ page.photo_cover }}" alt="{{ page.title }}">
+      </p>
+    {% endif %}
 
-  {% if page.name %}
-    <div>Name: {{ page.name }}</div>
-  {% endif %}
+    {% if page.name %}
+      <div>Name: {{ page.name }}</div>
+    {% endif %}
 
-  {% if page.location %}
-    <div>Location: {{ page.location }}</div>
-  {% endif %}
+    {% if page.location %}
+      <div>Location: {{ page.location }}</div>
+    {% endif %}
 
-  {% if page.style %}
-    <div>Style: {{ page.style }}</div>
-  {% endif %}
+    {% if page.style %}
+      <div>Style: {{ page.style }}</div>
+    {% endif %}
 
-  {% if page.website %}
-    <a href="{{ page.website }}" target="_blank"><span class="icon-public"></span></a>
-  {% endif %}
+    {% if page.website %}
+      <a href="{{ page.website }}" target="_blank"><span class="icon-public"></span></a>
+    {% endif %}
 
-  {% if page.bandcamp %}
-    <a href="{{ page.bandcamp }}" target="_blank"><span class="icon-bandcamp"></span></a>
-  {% endif %}
+    {% if page.bandcamp %}
+      <a href="{{ page.bandcamp }}" target="_blank"><span class="icon-bandcamp"></span></a>
+    {% endif %}
 
-  {% if page.facebook %}
-    <a href="{{ page.facebook }}" target="_blank"><span class="icon-facebook"></span></a>
-  {% endif %}
+    {% if page.facebook %}
+      <a href="{{ page.facebook }}" target="_blank"><span class="icon-facebook"></span></a>
+    {% endif %}
 
-  {% if page.soundcloud %}
-    <a href="{{ page.soundcloud }}" target="_blank"><span class="icon-soundcloud"></span></a>
-  {% endif %}
+    {% if page.soundcloud %}
+      <a href="{{ page.soundcloud }}" target="_blank"><span class="icon-soundcloud"></span></a>
+    {% endif %}
 
-  {% if page.discogs %}
-    <a href="{{ page.discogs }}" target="_blank"><span class="icon-discogs"></span></a>
-  {% endif %}
+    {% if page.discogs %}
+      <a href="{{ page.discogs }}" target="_blank"><span class="icon-discogs"></span></a>
+    {% endif %}
 
-  <div id="vue-tabs">
-    <vue-tabs>
-      <v-tab title="Bandcamp" icon="icon-bandcamp">
-        {% if page.youtube_id %}
-          <div class="iframe-holder">
-            <div class="iframe-holder__ratio">
-              <iframe class="iframe-holder__iframe" src="https://www.youtube.com/embed/videoseries?list={{ page.youtube_id }}" allowfullscreen></iframe>
+    <div id="vue-tabs">
+      <vue-tabs>
+        <v-tab title="Youtube" icon="icon-youtube">
+          {% if page.youtube_id %}
+            <div class="iframe-holder">
+              <div class="iframe-holder__ratio">
+                <iframe class="iframe-holder__iframe" src="https://www.youtube.com/embed/videoseries?list={{ page.youtube_id }}" allowfullscreen></iframe>
+              </div>
             </div>
-          </div>
-        {% endif %}
-      </v-tab>
-      <v-tab title="Soundcloud" icon="icon-soundcloud">
-        {% if page.soundcloud_id %}
-          <div class="iframe-holder">
-            <div class="iframe-holder__ratio">
-              <iframe class="iframe-holder__iframe" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud_id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true"></iframe>
+          {% endif %}
+        </v-tab>
+        <v-tab title="Soundcloud" icon="icon-soundcloud">
+          {% if page.soundcloud_id %}
+            <div class="iframe-holder">
+              <div class="iframe-holder__ratio">
+                <iframe class="iframe-holder__iframe" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud_id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true"></iframe>
+              </div>
             </div>
-          </div>
-        {% endif %}
-      </v-tab>
-    </vue-tabs>
+          {% endif %}
+        </v-tab>
+      </vue-tabs>
+    </div>
+
+    {{ content }}
   </div>
-
-  {{ content }}
 </div>
