--- a/_components/FooterBlock/index.html
+++ b/_components/FooterBlock/index.html
@@ -44,6 +44,10 @@
         <span class="icon-mixcloud"></span>
         <span class="tooltip">mixcloud</span>
     </a> -->
+    <!-- <a href="https://www.linkedin.com/company-beta/3256285" target="_blank">
+        <span class="icon-linkedin"></span>
+        <span class="tooltip">linkedin</span>
+    </a> -->
     <a href="https://vk.com/club1342946" target="_blank">
         <span class="icon-vkontakte"></span>
         <span class="tooltip">vkontakte</span>
