upd gulp, upd js, upd site bg

--- a/_components/PageRelease/index.html
+++ b/_components/PageRelease/index.html
@@ -151,10 +151,10 @@
           <img class="page-release-content__btn-icon" src="{{ site.baseurl }}/assets/img/svg-icons/facebook.svg">
           <span class="page-release-content__btn-counter" data-counter="facebook"></span>
         </a>
-        <a href="#" class="page-release-content__btn-vkontakte" data-social="vkontakte">
+        <!-- <a href="#" class="page-release-content__btn-vkontakte" data-social="vkontakte">
           <img class="page-release-content__btn-icon" src="{{ site.baseurl }}/assets/img/svg-icons/vkontakte.svg">
           <span class="page-release-content__btn-counter" data-counter="vkontakte"></span>
-        </a>
+        </a> -->
         <a href="#" class="page-release-content__btn-googleplus" data-social="googleplus">
           <img class="page-release-content__btn-icon" src="{{ site.baseurl }}/assets/img/svg-icons/googleplus.svg">
           <span class="page-release-content__btn-counter" data-counter="googleplus"></span>
