add jekyll comments

--- a/_components/FooterBlock/index.html
+++ b/_components/FooterBlock/index.html
@@ -16,6 +16,10 @@
       <span class="icon-bandcamp"></span>
       <span class="tooltip">bandcamp</span>
     </a>
+    <a href="http://www.junodownload.com/labels/Sentimony/releases/?order=date_down" target="_blank">
+      <span class="icon-junodownload"></span>
+      <span class="tooltip">junodownload</span>
+    </a>
     <a href="https://www.facebook.com/sentimony.records" target="_blank">
       <span class="icon-facebook"></span>
       <span class="tooltip">facebook</span>
@@ -23,10 +27,6 @@
     <a href="https://www.youtube.com/c/SentimonyRecordsOfficial" target="_blank">
       <span class="icon-youtube"></span>
       <span class="tooltip">youtube</span>
-    </a>
-    <a href="http://www.junodownload.com/labels/Sentimony/releases/?order=date_down" target="_blank">
-      <span class="icon-junodownload"></span>
-      <span class="tooltip">junodownload</span>
     </a>
     <a href="https://soundcloud.com/sentimony" target="_blank">
       <span class="icon-soundcloud"></span>
@@ -40,18 +40,20 @@
         <span class="icon-googleplus"></span>
         <span class="tooltip">googleplus</span>
     </a>
-    <!-- <a href="https://www.mixcloud.com/sentimony" target="_blank">
+    {% comment %}
+    <a href="https://www.mixcloud.com/sentimony" target="_blank">
         <span class="icon-mixcloud"></span>
         <span class="tooltip">mixcloud</span>
-    </a> -->
-    <!-- <a href="https://www.linkedin.com/company-beta/3256285" target="_blank">
+    </a>
+    <a href="https://www.linkedin.com/company-beta/3256285" target="_blank">
         <span class="icon-linkedin"></span>
         <span class="tooltip">linkedin</span>
-    </a> -->
+    </a>
     <a href="https://vk.com/club1342946" target="_blank">
         <span class="icon-vkontakte"></span>
         <span class="tooltip">vkontakte</span>
     </a>
+    {% endcomment %}
     <a href="https://www.discogs.com/label/82598-Sentimony-Records?sort=year&sort_order=desc&layout=big" target="_blank">
         <span class="icon-discogs"></span>
         <span class="tooltip">discogs</span>
