rework footer-block__copyright-logo

--- a/_components/FooterBlock/index.html
+++ b/_components/FooterBlock/index.html
@@ -69,7 +69,10 @@
   <div class="footer-block__copyright">
     <div>2006 - 2017 © Sentimony Records</div>
     <div>All Rights Reserved</div>
-    <div><span class="icon-sentimony-records-logo"></span></div>
+    <div>
+      {% comment %}<span class="icon-sentimony-records-logo"></span>{% endcomment %}
+      <img class="footer-block__copyright-logo" src="{{ site.baseurl }}/assets/img/svg-icons/sentimony-records-logo.svg" alt="Sentimony Records Logo SVG">
+    </div>
   </div>
 
   <div class="footer-block__powered">
