--- a/_components/BlockMainMenu/index.html
+++ b/_components/BlockMainMenu/index.html
@@ -1,7 +1,7 @@
 <header class="main-menu">
   <div class="main-menu__container">
 
-  {% include LogoLink/index.html %}
+  {% include BlockLogoLink/index.html %}
 
   <nav class="main-menu__main-menu">
     <a href="{{ site.baseurl }}/release/va-the-ten/" class="main-menu__main-menu-link{% if page.url contains 'release' %} is-selected{% endif %}">Releases</a>
