--- a/_components/PageArtist/index.html
+++ b/_components/PageArtist/index.html
@@ -81,23 +81,24 @@
             </v-tab>
             {% if page.soundcloud_id %}
               <v-tab title="Soundcloud" icon="icon-soundcloud">
-                <div class="iframe-holder">
-                  <div class="iframe-holder__ratio">
-                    <iframe class="iframe-holder__iframe" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud_id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true"></iframe>
-                  </div>
-                </div>
+                <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud_id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true" style="width:100%;height:500px;border:none;display:block"></iframe>
+              </v-tab>
+            {% endif %}
+            {% if page.facebook %}
+              <v-tab title="Facebook" icon="icon-facebook">
+                {% comment %}
+                <!-- TODO: What is appId ??? -->
+                {% endcomment %}
+                <iframe class="facebook-widget facebook-widget--size-s" src="https://www.facebook.com/plugins/page.php?href={{ page.facebook }}%2F&tabs&width=287&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=197035617008842" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                <iframe class="facebook-widget facebook-widget--size-m" src="https://www.facebook.com/plugins/page.php?href={{ page.facebook }}%2F&tabs&width=500&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=197035617008842" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
               </v-tab>
             {% endif %}
             {% if page.discogs %}
               <v-tab title="Discography" icon="icon-discogs">
-                <p>
-                  <a href="{{ page.discogs }}" target="_blank">
-                    <span style="display:flex;align-items:center;">
-                      <img src="{{ site.baseurl }}/assets/img/svg-icons/discogs.svg" style="width:1.5em;margin-right:.5em;">
-                      <span>Discogs</span>
-                    </span>
-                  </a>
-                </p>
+                <a href="{{ page.discogs }}" target="_blank" style="display:flex;align-items:center">
+                  <img src="{{ site.baseurl }}/assets/img/svg-icons/discogs.svg" style="width:20px;margin-right:.4em">
+                  <span>Discogs</span>
+                </a>
               </v-tab>
             {% endif %}
           </vue-tabs>
