--- a/_components/PageRelease/index.html
+++ b/_components/PageRelease/index.html
@@ -173,5 +173,8 @@
       </p>
     </div>
 
+    {% if page.comments %}
+      {% include DisqusComments/index.html %}
+    {% endif %}
   </div>
 </div>
